# TSOCRApi

./: README.md  main.py  pyproject.toml
